// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Example/Button BackgroundColor smoke-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Button",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
  ],
  "name": "example-button--background-color",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;

exports[`Example/Button BackgroundColor smoke-test 2`] = `
<button type="button"
        class="storybook-button storybook-button--medium storybook-button--secondary"
        style="background-color: rgb(192, 255, 238);"
>
  Button
</button>
`;

exports[`Example/Button Large smoke-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Button",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
  ],
  "name": "example-button--large",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;

exports[`Example/Button Large smoke-test 2`] = `
<button type="button"
        class="storybook-button storybook-button--large storybook-button--secondary"
>
  Button
</button>
`;

exports[`Example/Button Primary smoke-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Button",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
  ],
  "name": "example-button--primary",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;

exports[`Example/Button Primary smoke-test 2`] = `
<button type="button"
        class="storybook-button storybook-button--medium storybook-button--primary"
>
  Button
</button>
`;

exports[`Example/Button Secondary smoke-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Button",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
  ],
  "name": "example-button--secondary",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;

exports[`Example/Button Secondary smoke-test 2`] = `
<button type="button"
        class="storybook-button storybook-button--medium storybook-button--secondary"
>
  Button
</button>
`;

exports[`Example/Button Small smoke-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Button",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
  ],
  "name": "example-button--small",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;

exports[`Example/Button Small smoke-test 2`] = `
<button type="button"
        class="storybook-button storybook-button--small storybook-button--secondary"
>
  Button
</button>
`;
